unpackaged/main/default/objects/GiactInquiryResponse__c/GiactInquiryResponse__c.object-meta.xml
<CustomObject>
    <label>GIACT Inquiry Response</label>
    <nameField>
        <displayFormat>GIR-{0000}</displayFormat>
        <label>GIACT Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GIACT Inquiry Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>