unpackaged/main/default/objects/GiactInquiryResponse__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gVerify</fullName>
            </value>
            <value>
                <fullName>gAuthenticate</fullName>
            </value>
            <value>
                <fullName>gIdentify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>