unpackaged/main/default/objects/GiactInquiryResponse__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>GIACT Inquiry Responses</relationshipLabel>
    <relationshipName>GIACT_Inquiry_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>