unpackaged/main/default/objects/GiactInquiryResponse__c/fields/gAuthenticateReason__c.field-meta.xml
<CustomField>
    <fullName>gAuthenticateReason__c</fullName>
    <label>gAuthenticate Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>