unpackaged/main/default/objects/GiactInquiryResponse__c/fields/gAuthenticateResponseCode__c.field-meta.xml
<CustomField>
    <fullName>gAuthenticateResponseCode__c</fullName>
    <label>gAuthenticate Response Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nill</fullName>
                <default>true</default>
                <label>Nill</label>
            </value>
            <value>
                <fullName>CA01</fullName>
            </value>
            <value>
                <fullName>CA11</fullName>
            </value>
            <value>
                <fullName>CA21</fullName>
            </value>
            <value>
                <fullName>CA22</fullName>
            </value>
            <value>
                <fullName>CA23</fullName>
            </value>
            <value>
                <fullName>CA24</fullName>
            </value>
            <value>
                <fullName>CA25</fullName>
            </value>
            <value>
                <fullName>CA30</fullName>
            </value>
            <value>
                <fullName>CI01</fullName>
            </value>
            <value>
                <fullName>CI02</fullName>
            </value>
            <value>
                <fullName>CI11</fullName>
            </value>
            <value>
                <fullName>CI21</fullName>
            </value>
            <value>
                <fullName>CI22</fullName>
            </value>
            <value>
                <fullName>CI23</fullName>
            </value>
            <value>
                <fullName>CI24</fullName>
            </value>
            <value>
                <fullName>CI25</fullName>
            </value>
            <value>
                <fullName>CI30</fullName>
            </value>
            <value>
                <fullName>ND02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>