unpackaged/main/default/objects/GiactInquiryResponse__c/fields/gVerifyOverAllReason__c.field-meta.xml
<CustomField>
    <fullName>gVerifyOverAllReason__c</fullName>
    <label>gVerify OverAll Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>