unpackaged/main/default/objects/GiactInquiryResponse__c/fields/gVerifyOverAllReasonCode__c.field-meta.xml
<CustomField>
    <fullName>gVerifyOverAllReasonCode__c</fullName>
    <label>gVerify OverAll Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>PrivateBadChecksList</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>RejectItem</fullName>
            </value>
            <value>
                <fullName>AcceptWithRisk</fullName>
            </value>
            <value>
                <fullName>RiskAlert</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>PassNdd</fullName>
            </value>
            <value>
                <fullName>NegativeData</fullName>
            </value>
            <value>
                <fullName>NoData</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>