unpackaged/main/default/objects/GiactInquiryResponse__c/fields/gVerifySpecificReason__c.field-meta.xml
<CustomField>
    <fullName>gVerifySpecificReason__c</fullName>
    <label>gVerify Specific Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>