unpackaged/main/default/objects/GiactInquiryResponse__c/fields/gVerifySpecificResponseCode__c.field-meta.xml
<CustomField>
    <fullName>gVerifySpecificResponseCode__c</fullName>
    <label>gVerify Specific Response Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nill</fullName>
                <default>true</default>
                <label>Nill</label>
            </value>
            <value>
                <fullName>GS01</fullName>
            </value>
            <value>
                <fullName>GS02</fullName>
            </value>
            <value>
                <fullName>GS03</fullName>
            </value>
            <value>
                <fullName>GS04</fullName>
            </value>
            <value>
                <fullName>GP01</fullName>
            </value>
            <value>
                <fullName>RT00</fullName>
            </value>
            <value>
                <fullName>RT01</fullName>
            </value>
            <value>
                <fullName>RT02</fullName>
            </value>
            <value>
                <fullName>RT03</fullName>
            </value>
            <value>
                <fullName>RT04</fullName>
            </value>
            <value>
                <fullName>RT05</fullName>
            </value>
            <value>
                <fullName>_1111</fullName>
            </value>
            <value>
                <fullName>_2222</fullName>
            </value>
            <value>
                <fullName>_3333</fullName>
            </value>
            <value>
                <fullName>_5555</fullName>
            </value>
            <value>
                <fullName>_7777</fullName>
            </value>
            <value>
                <fullName>_8888</fullName>
            </value>
            <value>
                <fullName>_9999</fullName>
            </value>
            <value>
                <fullName>GN01</fullName>
            </value>
            <value>
                <fullName>GN05</fullName>
            </value>
            <value>
                <fullName>ND00</fullName>
            </value>
            <value>
                <fullName>ND01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>