unpackaged/main/default/objects/GiactInquiryResponse__c/fields/RequestText__c.field-meta.xml
<CustomField>
    <fullName>RequestText__c</fullName>
    <label>Request Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>