unpackaged/main/default/objects/GiactInquiryResponse__c/fields/ResponseStatus__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatus__c</fullName>
    <label>Response Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>