unpackaged/main/default/objects/GiactInquiryResponse__c/fields/ResponseText__c.field-meta.xml
<CustomField>
    <fullName>ResponseText__c</fullName>
    <label>Response Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>