unpackaged/main/default/objects/GiactInquiryResponse__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <label>UniqueId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>