unpackaged/main/default/objects/GiactInquiryResponse__c/fields/ValuePlus__c.field-meta.xml
<CustomField>
    <fullName>ValuePlus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This helps is showing all the GIACT audit Logs in with each value plus records.</description>
    <inlineHelpText>This helps is showing all the GIACT audit Logs in with each value plus records.</inlineHelpText>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>GIACT Inquiry Responses</relationshipLabel>
    <relationshipName>GIACT_Inquiry_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>